--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "maatwebsite/excel": "3.1.48",
         "spatie/browsershot": "^4.1",
         "spatie/laravel-pdf": "*",
-        "stripe/stripe-php": "^17.6"
+        "stripe/stripe-php": "^17.6",
+        "livewire/livewire": "3.5.12"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
@@ -31,7 +32,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "livewire/livewire": "3.5.12"
     },
     "autoload": {
         "psr-4": {
