--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "^3.0",
+        "laravel-lang/common": "^6.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "3.5.12",
         "maatwebsite/excel": "3.1.48",
         "spatie/browsershot": "^4.1",
         "spatie/laravel-pdf": "*",
-        "stripe/stripe-php": "^17.6",
-        "livewire/livewire": "3.5.12"
+        "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
